--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ body {
 
 .donate__paragraph {
   color: #707070;
-  width: 60%;
+  width: 50%;
   margin: 8px auto;
 }
 
@@ -103,4 +103,39 @@ body {
   border: none;
   outline: none;
   border-bottom: 1px solid #707070;
+}
+
+.plan {
+  text-align: center;
+  padding: 60px 60px;
+}
+
+.plan__heading {
+  font-size: 42px;
+}
+
+.plan__paragraph {
+  color: #707070;
+  width: 50%;
+  margin: 8px auto;
+}
+
+.plan__items {
+  margin-top: 48px;
+  display: flex;
+}
+
+.plan__item {
+  background-color: #edf5f6;
+  padding: 32px;
+  text-align: left;
+  width: 30%;
+}
+
+.plan__img {
+  margin-bottom: 16px;
+}
+.plan__title {
+  font-size: 24px;
+  margin-bottom: 16px;
 }
