--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,31 @@ body {
   margin: 0 auto;
 }
 
+.section {
+  text-align: center;
+  padding: 60px 0;
+}
+.section__title {
+  font-size: 42px;
+}
+
+.section__sub-title {
+  color: #707070;
+  width: 50%;
+  margin: 8px auto 32px auto;
+}
+
+.button {
+  font-size: 20px;
+  display: inline-block;
+  background-color: #ff5959;
+  color: white;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+/* Header Styles */
+
 .header {
   color: white;
   height: 100vh;
@@ -35,6 +60,7 @@ body {
 }
 
 .header__content {
+  margin: 0 auto;
   width: 70%;
   text-align: center;
 }
@@ -45,35 +71,14 @@ body {
 .header__sub-title {
   line-height: 1.5;
   width: 70%;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
-.button {
-  font-size: 20px;
-  display: inline-block;
-  background-color: #ff5959;
-  color: white;
-  text-decoration: none;
-  padding: 10px 20px;
-}
-
-.section {
-  text-align: center;
-  padding: 60px 0;
-}
-.section__heading {
-  font-size: 42px;
-}
-
-.section__text {
-  color: #707070;
-  width: 50%;
-  margin: 8px auto;
-}
+/* Donate Styles */
 
 .donate__amounts {
-  margin: 50px auto;
   width: 70%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
@@ -99,14 +104,15 @@ body {
   text-align: center;
   display: block;
   width: 60%;
-  margin: 0 auto;
+  margin: 32px auto;
   border: none;
   outline: none;
   border-bottom: 1px solid #707070;
 }
 
+/* Plan Styles */
+
 .plan__items {
-  margin-top: 48px;
   display: flex;
   justify-content: space-between;
 }
@@ -135,15 +141,20 @@ body {
   margin-bottom: 16px;
 }
 
+/* Gallery Styles */
+
 .gallery__photos {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 24px;
 }
 .gallery__photo {
+  object-fit: cover;
   width: 32%;
-  margin-bottom: 24px;
 }
+
+/* Newsletter Styles */
 
 .newsletter__form {
   background-color: #fff4d6;
@@ -168,6 +179,8 @@ body {
   outline: none;
   padding: 0 30px;
 }
+
+/* Footer Styles */
 
 .footer {
   background-color: #0b0d17;
