--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: inherit;
 }
 
 body {
@@ -34,15 +35,17 @@ body {
   color: #707070;
   width: 50%;
   margin: 8px auto 32px auto;
+  line-height: 1.2;
 }
 
 .button {
-  font-size: 20px;
+  font-size: 18px;
   display: inline-block;
   background-color: #ff5959;
   color: white;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 12px 24px;
+  border-radius: 100px;
 }
 
 /* Header Styles */
@@ -99,7 +102,7 @@ body {
 
 .donate__input {
   color: #707070;
-  padding: 10px;
+  padding: 6px;
   font-size: 18px;
   text-align: center;
   display: block;
@@ -121,6 +124,7 @@ body {
   padding: 32px;
   text-align: left;
   width: 31%;
+  border-radius: 16px;
 }
 
 .plan__item--1 {
@@ -152,6 +156,7 @@ body {
 .gallery__photo {
   object-fit: cover;
   width: 32%;
+  border-radius: 8px;
 }
 
 /* Newsletter Styles */
@@ -164,20 +169,24 @@ body {
 }
 
 .newsletter__input {
-  padding: 16px;
+  font-size: 16px;
+  padding: 16px 24px;
   background-color: #d9d9d9;
   border: none;
   outline: none;
   width: 50%;
+  border-radius: 100px 0 0 100px;
 }
 
 .newsletter__button {
+  font-size: 16px;
   font-family: inherit;
   color: #fff;
   background-color: #ff5959;
   border: none;
   outline: none;
-  padding: 0 30px;
+  padding: 0 35px;
+  border-radius: 0 100px 100px 0;
 }
 
 /* Footer Styles */
