--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/********** Global CSS *********
+********************************/
 * {
   padding: 0;
   margin: 0;
@@ -9,15 +11,6 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-/* Common Css */
-.margin-top-20 {
-  margin-top: 20px;
-}
-
-.margin-top-15 {
-  margin-top: 20px;
-}
-
 .container {
   max-width: 1240px;
   margin: 0 auto;
@@ -27,6 +20,7 @@ body {
   text-align: center;
   padding: 60px 0;
 }
+
 .section__title {
   font-size: 42px;
 }
@@ -48,8 +42,8 @@ body {
   border-radius: 100px;
 }
 
-/* Header Styles */
-
+/********** Header Styles **********
+***********************************/
 .header {
   color: white;
   height: 100vh;
@@ -77,8 +71,8 @@ body {
   margin: 20px auto;
 }
 
-/* Donate Styles */
-
+/********** Donate Styles **********
+***********************************/
 .donate__amounts {
   width: 70%;
   margin: 0 auto;
@@ -113,8 +107,8 @@ body {
   border-bottom: 1px solid #707070;
 }
 
-/* Plan Styles */
-
+/********** Plan Styles **********
+*********************************/
 .plan__items {
   display: flex;
   justify-content: space-between;
@@ -145,8 +139,8 @@ body {
   margin-bottom: 16px;
 }
 
-/* Gallery Styles */
-
+/********** Gallery Styles **********
+************************************/
 .gallery__photos {
   display: flex;
   flex-wrap: wrap;
@@ -159,8 +153,8 @@ body {
   border-radius: 8px;
 }
 
-/* Newsletter Styles */
-
+/********** Newsletter Styles **********
+***************************************/
 .newsletter__form {
   background-color: #fff4d6;
   padding: 80px 0;
@@ -189,8 +183,8 @@ body {
   border-radius: 0 100px 100px 0;
 }
 
-/* Footer Styles */
-
+/********** Footer Styles **********
+***********************************/
 .footer {
   background-color: #0b0d17;
   color: #fff;
